--- a/FiapCloud.Users/appsettings.json
+++ b/FiapCloud.Users/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Host=localhost;Port=5432;Database=FiapCloudUsers;Username=fiap;Password=devfiap"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
