--- a/FiapCloud.Users/appsettings.json
+++ b/FiapCloud.Users/appsettings.json
@@ -2,6 +2,11 @@
   "ConnectionStrings": {
     "DefaultConnection": "Host=localhost;Port=5432;Database=FiapCloudUsers;Username=fiap;Password=devfiap"
   },
+  "Jwt": {
+    "Key": "MinhaChaveSuperSecretaDeDesenvolvimento123456",
+    "Issuer": "FiapCloud.Users.Api",
+    "Audience": "FiapCloud.Client"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
